--- a/index.html
+++ b/index.html
@@ -9,9 +9,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to  </h1>
-    <h1> <span class="header-name">Mosarof </span>Hossen</h1>
-    <h3>World-class professenal web developer</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed saepe illum dolores culpa veniam tempora sint, architecto nisi dicta accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aperiam non saepe aliquid, at cum.</p>
+   <section class="continer">
+    <div class="header-top">
+
+       
+        <div class="topber">
+             <div class="about">
+                <h1 class="wel">Welcome To</h1>
+                <h1 class="ok"><span class="about-1">Mosarof Hossen</span> dev</h1>
+                <h4 class="heading4">Build Dynamic website</h4>
+                <p class="abp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur et qui tenetur iusto at minima quis ipsam perferendis vitae, alias ducimus magnam aliquid expedita beatae! Iste, sapiente corporis corrupti nostrum explicabo dicta suscipit, cum eligendi harum esse voluptatibus itaque dolor?</p>
+                <a class="our-fb" target="_blank" href="https://www.facebook.com/muniruzzaman.munir.581"> Our Facebook</a>
+            </div>
+            <div class="image">
+                <img class="img1" src="./image/image 11.png" alt="image">
+            </div>
+        </div>
+    </div>
+   </section>
+    
 </body>
 </html>
